# EventQueue

./: .gitignore  CMakeLists.txt  README.md  Rationale.md  config.sh  run.sh
doc/: Dialect.md
equeue-opt/: CMakeLists.txt  equeue-opt.cpp
eval/lowering/: lowering.py  tmp.py  visualize.py
eval/optimal-dataflow-arraysize/: dataflow-arraysize.py  modify-csv.py  pareto-oneset.py  summary.csv  summary2.csv  tmp  visualize-3d.py  visualize-bw.py  visualize-cycles-ratio.py  visualize-cycles.py  visualize-energy.py  visualize-exec-time.py  visualize-oneset-df.py  visualize-oneset.py  visualize-optimal.py
eval/scale-sim-diff-filter/: summary-is.csv  summary.csv  time.py  verify-scale-sim.py  visualize.py
eval/scale-sim-diff-ifmap/: summary-is.csv  summary-os.csv  summary.csv  verify-scale-sim.py  visualize.py
example/: CMakeLists.txt
example/FIR/: CMakeLists.txt  README.md
example/SystolicArray/: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/EDSC/: Intrinsics.h
include/EQueue/: CMakeLists.txt  CommandProcessor.h  EQueueDialect.h  EQueueDialect.td  EQueueDialectGenerator.h  EQueueOps.h  EQueueOps.td  EQueuePasses.h  EQueuePasses.td  EQueueStructs.h  EQueueTraits.h  Utils.h
include/Generator/: CMakeLists.txt  EQueueGenerator.h
lib/: CMakeLists.txt
lib/EDSC/: CMakeLists.txt  Intrinsics.cpp
lib/EQueue/: CMakeLists.txt  CommandProcessor.cpp  EQueueDialect.cpp  EQueueDialectGenerator.cpp  EQueueOps.cpp
lib/Generator/: is.txt  (+8 more)
mydoc/: Dialect.md  NextSteps.md  Passes.md  WhyEQueue.md
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
(+132 files in other folders)
